objects/Voter__c.object
<CustomObject><fields>
        <fullName>Contacted_2016__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted (2016)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Last_Contact_Date__c</fullName>
        <label>Last Contact Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Political_Party__c</fullName>
        <label>Political Party</label>
        <picklist>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Democrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Republican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Precinct__c</fullName>
        <label>Precinct</label>
        <referenceTo>Precinct__c</referenceTo>
        <relationshipLabel>Voters</relationshipLabel>
        <relationshipName>Voters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Voter</label><nameField>
        <label>Voter Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Voters</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>